// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click bar 1`] = `
<div class="van-slider van-slider--disabled">
  <div class="van-slider__bar" style="width: 50%; height: 2px;">
    <div class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`click bar 2`] = `
<div class="van-slider">
  <div class="van-slider__bar" style="width: 100%; height: 2px;">
    <div class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`click vertical 1`] = `
<div class="van-slider van-slider--vertical">
  <div class="van-slider__bar" style="height: 100%; width: 2px;">
    <div class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button 1`] = `
<div class="van-slider van-slider--disabled">
  <div class="van-slider__bar" style="width: 50%; height: 2px;">
    <div class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button 2`] = `
<div class="van-slider">
  <div class="van-slider__bar" style="width: 100%; height: 2px;">
    <div class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button vertical 1`] = `
<div class="van-slider van-slider--vertical">
  <div class="van-slider__bar" style="height: 100%; width: 2px;">
    <div class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;
